--- a/Demo-3/Demo-3.ipynb
+++ b/Demo-3/Demo-3.ipynb
@@ -82,6 +82,103 @@
     "# Namen von Spalten\n",
     "df.columns"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset bereinigen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Nullwerte zeigen\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Spalten mit Nullwerte löschen\n",
+    "df.drop(columns=[\"excess_mortality_cumulative_per_million\",\"excess_mortality\",\"excess_mortality_cumulative\",\n",
+    "\"excess_mortality_cumulative_absolute\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Erstelle das Boxplot für die 'total_cases'-Spalte (einschließlich Ausreißer)\n",
+    "import plotly.express as px\n",
+    "px.box(df[\"total_cases\"]) #hat outlyer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#handling missing werts\n",
+    "df[\"total_cases\"]=df['total_cases'].fillna(df[\"total_cases\"].median())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.box(df[\"life_expectancy\"]) #keine outlayer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dataset zeigen 5 erste Zeile\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Anzahl von Zeilen und Spalten\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Namen von Spalten\n",
+    "df.columns"
+   ]
   }
  ],
  "metadata": {
