--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,58 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "covid_19_dataset = pd.read_csv('cleaned_dataset.csv')\n",
     "regions_dataset = pd.read_csv('regions_dataset.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Sample Plot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Load dataset\n",
-    "# df = pd.read_csv(\"cleaned_dataset.csv\")\n",
-    "\n",
-    "# # Convert Date column to datetime format\n",
-    "# df['Date'] = pd.to_datetime(df['Date'])\n",
-    "\n",
-    "# # Choose a country (e.g., 'Mexico')\n",
-    "# country = \"Mexico\"\n",
-    "# df_country = df[df['Country'] == country].sort_values(by=\"Date\")\n",
-    "\n",
-    "# # Compute cumulative sum\n",
-    "# df_country['Total Confirmed'] = df_country['Confirmed'].cumsum()\n",
-    "# df_country['Total Recovered'] = df_country['Recovered'].cumsum()\n",
-    "# df_country['Total Deaths'] = df_country['Deaths'].cumsum()\n",
-    "\n",
-    "# # Plot time series graph\n",
-    "# plt.figure(figsize=(12, 6))\n",
-    "# plt.plot(df_country['Date'], df_country['Total Confirmed'], label=\"Confirmed Cases\", color='blue')\n",
-    "# plt.plot(df_country['Date'], df_country['Total Recovered'], label=\"Recovered Cases\", color='green')\n",
-    "# plt.plot(df_country['Date'], df_country['Total Deaths'], label=\"Deaths\", color='red')\n",
-    "\n",
-    "# # Formatting the plot\n",
-    "# plt.xlabel(\"Date\")\n",
-    "# plt.ylabel(\"Cumulative Count\")\n",
-    "# plt.title(f\"COVID-19 Time Series for {country}\")\n",
-    "# plt.legend()\n",
-    "# plt.xticks(rotation=45)\n",
-    "# plt.grid(True)\n",
-    "\n",
-    "# # Show plot\n",
-    "# # plt.show()"
    ]
   },
   {
@@ -106,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating Reload Button"
+    "### Creating Reload, Remove, Add Buttons"
    ]
   },
   {
@@ -320,8 +274,65 @@
     "    description='Reload',\n",
     "    disabled=False,\n",
     "    button_style='info',\n",
-    "    tooltip='Reload',\n",
+    "    tooltip='Reload Graph',\n",
     "    icon='check'\n",
+    ")\n",
+    "\n",
+    "remove_button = wgts.Button(\n",
+    "    description='Remove',\n",
+    "    disabled=False,\n",
+    "    button_style='danger',\n",
+    "    tooltip='Remove Region',\n",
+    "    icon='minus'\n",
+    ")\n",
+    "\n",
+    "add_button = wgts.Button(\n",
+    "    description='Add',\n",
+    "    disabled=False,\n",
+    "    button_style='success',\n",
+    "    tooltip='Add Region',\n",
+    "    icon='plus'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Region Selection Menu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_regions_menu = wgts.Select(\n",
+    "    description='Regions:',\n",
+    "    disabled=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Column Selection Toggle Buttons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_selection_buttons = wgts.ToggleButtons(\n",
+    "    options=['Confirmed', 'Recovered', 'Deaths'],\n",
+    "    description='Column:',\n",
+    "    disabled=False,\n",
+    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltips=['Confirmed Cases Of Covid-19', 'Recoveries From Covid-19', 'Deaths From Covid-19'],\n",
     ")"
    ]
   }
