--- a/Demo-3/Demo-3.ipynb
+++ b/Demo-3/Demo-3.ipynb
@@ -151,13 +151,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Dataset zeigen 5 erste Zeile\n",
-    "df.head()"
+    "## Spalten mit Nullwerte durch mean oder median bezuglich des Auslereißer"
    ]
   },
   {
@@ -166,18 +163,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Anzahl von Zeilen und Spalten\n",
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Namen von Spalten\n",
-    "df.columns"
+    "df[\"life_expectancy\"]=df['life_expectancy'].fillna(df[\"life_expectancy\"].mean())\n",
+    "\n",
+    "df[\"new_cases_smoothed\"]=df['new_cases_smoothed'].fillna(df[\"new_cases_smoothed\"].mean())\n",
+    "\n",
+    "df[\"new_deaths_smoothed\"]=df['new_deaths_smoothed'].fillna(df[\"new_deaths_smoothed\"].mean())\n",
+    "\n",
+    "df[\"new_cases\"]=df['new_cases'].fillna(df[\"new_cases\"].mean())\n",
+    "\n",
+    "df[\"extreme_poverty\"]=df['extreme_poverty'].fillna(df[\"extreme_poverty\"].mean())\n",
+    "\n",
+    "df[\"female_smokers\"]=df['female_smokers'].fillna(df[\"female_smokers\"].mean())\n",
+    "\n",
+    "df[\"male_smokers\"]=df['male_smokers'].fillna(df[\"male_smokers\"].mean())\n",
+    "\n",
+    "df[\"handwashing_facilities\"]=df['handwashing_facilities'].fillna(df[\"handwashing_facilities\"].mean())\n",
+    "\n",
+    "df[\"hospital_beds_per_thousand\"]=df['hospital_beds_per_thousand'].fillna(df[\"hospital_beds_per_thousand\"].mean())\n",
+    "\n",
+    "df[\"human_development_index\"]=df['human_development_index'].fillna(df[\"human_development_index\"].mean())\n",
+    "\n"
    ]
   }
  ],
