--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -335,6 +335,13 @@
     "    tooltips=['Confirmed Cases Of Covid-19', 'Recoveries From Covid-19', 'Deaths From Covid-19'],\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Widget Events"
+   ]
   }
  ],
  "metadata": {
