--- a/Demo-3/Demo-3.ipynb
+++ b/Demo-3/Demo-3.ipynb
@@ -184,6 +184,32 @@
     "df[\"human_development_index\"]=df['human_development_index'].fillna(df[\"human_development_index\"].mean())\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mode Funktion für text Werte"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fill missing values with mode (most frequent value)\n",
+    "df['continent'].fillna(df['continent'].mode()[0], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.isnull().sum() #keine mehr null wert"
+   ]
   }
  ],
  "metadata": {
