--- a/Demo-3/Demo-3.ipynb
+++ b/Demo-3/Demo-3.ipynb
@@ -210,6 +210,50 @@
    "source": [
     "df.isnull().sum() #keine mehr null wert"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filter Data by Country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country = \"Iran\"\n",
+    "df_country = df[df['location'] == country] # Filter Data by Country\n",
+    "df_country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country = \"Iran\"\n",
+    "df_new_cases = df[(df['new_cases'] > 0) & (df['location'] == country)]\n",
+    "\n",
+    "\n",
+    "print(df_new_cases[['date', 'location', 'new_cases']].head(100)) #taglish new case\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_date = \"2020-01-05\"\n",
+    "end_date = \"2022-02-01\"\n",
+    "\n",
+    "df_date_range = df[(df['date'] >= start_date) & (df['date'] <= end_date)]\n",
+    "print(df_date_range[['date', 'location', 'new_cases']])"
+   ]
   }
  ],
  "metadata": {
