--- a/Demo-3/Demo-3.ipynb
+++ b/Demo-3/Demo-3.ipynb
@@ -254,6 +254,54 @@
     "df_date_range = df[(df['date'] >= start_date) & (df['date'] <= end_date)]\n",
     "print(df_date_range[['date', 'location', 'new_cases']])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Radio-Button-Widget für Fragen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Liste der Fragen\n",
+    "questions = [\n",
+    "    \"Wie schwer verläuft COVID-19 bei älteren Menschen?\",\n",
+    "    \"Welchen Einfluss hat das Rauchen auf den Krankheitsverlauf?\",\n",
+    "    \"Wie unterscheidet sich die COVID-19-Sterblichkeitsrate zwischen Männern und Frauen?\",\n",
+    "    \"Hat eine hohe Bevölkerungsdichte einen Einfluss auf die Ausbreitung von COVID-19?\",\n",
+    "    \"Wie hat sich COVID-19 saisonal entwickelt?\"\n",
+    "    \n",
+    "]\n",
+    "\n",
+    "# Widget für die Auswahl der Frage\n",
+    "question_selector = wgts.RadioButtons(\n",
+    "    options=questions,\n",
+    "    description=\"Frage:\",  \n",
+    "    disabled=False,\n",
+    "    layout={'width':'max-content'}\n",
+    ")\n",
+    "\n",
+    "# Ausgabe-Widget\n",
+    "output = wgts.Output()\n",
+    "\n",
+    "# Funktion zum Aktualisieren der Ausgabe\n",
+    "def on_question_selected(change):\n",
+    "    with output:\n",
+    "        output.clear_output()\n",
+    "        print(f\"Analyse zu: {change['new']}\")\n",
+    "\n",
+    "# Event-Listener für Änderungen hinzufügen\n",
+    "question_selector.observe(on_question_selected, names='value')\n",
+    "\n",
+    "# Anzeige der Widgets\n",
+    "display(question_selector, output)\n"
+   ]
   }
  ],
  "metadata": {
