--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -200,9 +200,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "29297b1c1679441f99559563f4b2c1fe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='World', icon='globe', style=ButtonStyle(), tooltip='Add World')"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "continent_dropdown_menu = wgts.Dropdown(\n",
     "    options= regions_dataset['Continent'].unique(),\n",
@@ -218,6 +234,14 @@
     "    options= countries,\n",
     "    description='Country:',\n",
     "    disabled=False,\n",
+    ")\n",
+    "\n",
+    "world_button = wgts.Button(\n",
+    "    description='World',\n",
+    "    disabled=False,\n",
+    "    button_style='',\n",
+    "    tooltip='Add World',\n",
+    "    icon='globe'\n",
     ")"
    ]
   },
@@ -255,6 +279,26 @@
     "    max=dateMax,\n",
     "    min=dateMin\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demo Category Radio Button"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "demo_category_radio = wgts.RadioButtons(\n",
+    "    options=['Show Time Series For Region', 'Compare Time Series For Multiple Regions'],\n",
+    "    description='Regional Category:',\n",
+    "    disabled=False\n",
+    ")"
    ]
   },
   {
@@ -341,6 +385,32 @@
    "metadata": {},
    "source": [
     "## Widget Events"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demo Category Radio Button Event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def on_demo_category_change(change):\n",
+    "    if change['new'] == 0:\n",
+    "        selected_regions_menu.disabled = True\n",
+    "        add_button.disabled = True\n",
+    "        remove_button.disabled = True\n",
+    "    elif change['new'] == 1:\n",
+    "        selected_regions_menu.disabled = False\n",
+    "        add_button.disabled = False\n",
+    "        remove_button.disabled = False\n",
+    "\n",
+    "demo_category_radio.obverve(on_demo_category_change, 'index')"
    ]
   }
  ],
