--- a/Demo-1/Demo-1+.ipynb
+++ b/Demo-1/Demo-1+.ipynb
@@ -200,48 +200,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29297b1c1679441f99559563f4b2c1fe",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='World', icon='globe', style=ButtonStyle(), tooltip='Add World')"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "continent_dropdown_menu = wgts.Dropdown(\n",
-    "    options= regions_dataset['Continent'].unique(),\n",
-    "    description='Continent:',\n",
+    "regions = regions_dataset['Continent'].unique().tolist()\n",
+    "\n",
+    "regions.insert(0, 'World')\n",
+    "regions_dropdown_menu = wgts.Dropdown(\n",
+    "    options= regions,\n",
+    "    description='Region:',\n",
     "    disabled=False,\n",
     ")\n",
     "\n",
-    "continent_filter = regions_dataset['Continent'] == continent_dropdown_menu.value\n",
-    "countries = regions_dataset[continent_filter]\n",
-    "countries = countries['Country']\n",
+    "continent_filter = regions_dataset['Continent'] == regions_dropdown_menu.value\n",
+    "countries = regions_dataset['Country'].sort_values(ascending=True).to_list()\n",
+    "countries.insert(0, 'None')\n",
     "\n",
     "countries_dropdown_menu = wgts.Dropdown(\n",
     "    options= countries,\n",
     "    description='Country:',\n",
     "    disabled=False,\n",
-    ")\n",
-    "\n",
-    "world_button = wgts.Button(\n",
-    "    description='World',\n",
-    "    disabled=False,\n",
-    "    button_style='',\n",
-    "    tooltip='Add World',\n",
-    "    icon='globe'\n",
     ")"
    ]
   },
@@ -343,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Region Selection Menu"
+    "### Selected Regions Menu"
    ]
   },
   {
@@ -403,14 +382,78 @@
     "def on_demo_category_change(change):\n",
     "    if change['new'] == 0:\n",
     "        selected_regions_menu.disabled = True\n",
+    "        column_selection_buttons.disabled = True\n",
     "        add_button.disabled = True\n",
     "        remove_button.disabled = True\n",
     "    elif change['new'] == 1:\n",
     "        selected_regions_menu.disabled = False\n",
+    "        column_selection_buttons.disabled = False\n",
     "        add_button.disabled = False\n",
     "        remove_button.disabled = False\n",
     "\n",
     "demo_category_radio.obverve(on_demo_category_change, 'index')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add/Remove Buttons Clicked Events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def on_add_button_clicked(change):\n",
+    "    if countries_dropdown_menu.value == 'None':\n",
+    "        temp_options = list(selected_regions_menu.options)\n",
+    "        temp_options.append(regions_dropdown_menu.value)\n",
+    "        temp_options = tuple(temp_options)\n",
+    "        selected_regions_menu.options = temp_options\n",
+    "    else:\n",
+    "        temp_options = list(selected_regions_menu.options)\n",
+    "        temp_options.append(countries_dropdown_menu.value)\n",
+    "        temp_options = tuple(temp_options)\n",
+    "        selected_regions_menu.options = temp_options\n",
+    "\n",
+    "def on_remove_button_clicked(change):\n",
+    "    if selected_regions_menu.options == ():\n",
+    "        return\n",
+    "    else:\n",
+    "        temp_options = list(selected_regions_menu.options)\n",
+    "        temp_options.remove(selected_regions_menu.value)\n",
+    "        temp_options = tuple(temp_options)\n",
+    "        selected_regions_menu.options = temp_options\n",
+    "\n",
+    "add_button.on_click(on_add_button_clicked)\n",
+    "remove_button.on_click(on_remove_button_clicked)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reload Button Clicked"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def on_reload_button_clicked(change):\n",
+    "    # case individual region time series\n",
+    "    if demo_category_radio.index == 0:\n",
+    "        \n",
+    "        pass\n",
+    "    # case multiple region time series\n",
+    "    elif demo_category_radio.index == 1:\n",
+    "        pass\n",
+    "    pass"
    ]
   }
  ],
