--- a/Demo-4/Demo-4.ipynb
+++ b/Demo-4/Demo-4.ipynb
@@ -29,6 +29,20 @@
     "df = pd.read_csv(\"../dataset/cleaned_dataset.csv\")\n",
     "df[\"Date\"] = pd.to_datetime(df[\"Date\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ulkeler = df[\"Country\"].unique()  # Benzersiz ülkeleri listele\n",
+    "ulke_secim = widgets.Dropdown(\n",
+    "    options=ulkeler,\n",
+    "    description=\"Wahl Land:\",\n",
+    "    style={'description_width': 'initial'}\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
