interactive mode on

--- a/Demo-4/Demo-4.ipynb
+++ b/Demo-4/Demo-4.ipynb
@@ -82,6 +82,15 @@
     "    \n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "widgets.interactive(guncelle, ulke=ulke_secim)"
+   ]
   }
  ],
  "metadata": {
