interactive - für jeden Tag

--- a/Demo-4/Demo-4.ipynb
+++ b/Demo-4/Demo-4.ipynb
@@ -208,6 +208,76 @@
    "source": [
     "widgets.interactive(aktulisiere, country=ulke_secim, tarih_araligi=tarih_secim)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../dataset/cleaned_dataset.csv\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Kullanıcı için seçim menüleri\n",
+    "country_dropdown = widgets.Dropdown(\n",
+    "    options=df[\"Country\"].unique(),\n",
+    "    description=\"Country:\",\n",
+    "    continuous_update=False\n",
+    ")\n",
+    "\n",
+    "date_dropdown = widgets.Dropdown(\n",
+    "    options=df[\"Date\"].unique(),\n",
+    "    description=\"Date:\",\n",
+    "    continuous_update=False\n",
+    ")\n",
+    "def update_plot(country, date):\n",
+    "    filtered_df = df[(df[\"Country\"] == country) & (df[\"Date\"] == date)]\n",
+    "    \n",
+    "    if filtered_df.empty:\n",
+    "        print(\"Bu tarihte veri bulunmamaktadır.\")\n",
+    "        return\n",
+    "    \n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.plot(df[df[\"Country\"] == country][\"Date\"], df[df[\"Country\"] == country][\"Confirmed\"], label=\"Confirmed\", marker='o')\n",
+    "    plt.xlabel(\"Datum\")\n",
+    "    plt.ylabel(\"Bestätigte Fallzahl\")\n",
+    "    plt.title(f\"{country} COVID-19-Falltrend\")\n",
+    "    plt.legend()\n",
+    "    plt.xticks(rotation=45)\n",
+    "    plt.grid(True)\n",
+    "    toplam_vaka = df_country[\"Confirmed\"].sum()  \n",
+    "    \n",
+    "    # Metin olarak toplam vaka sayısını göster\n",
+    "    display(f\"Gesamtzahl der bestätigten Fälle: {toplam_vaka:,}\")\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "widgets.interactive(update_plot, country=country_dropdown, date=date_dropdown)"
+   ]
   }
  ],
  "metadata": {
