auswählen und filtern Ländern

--- a/Demo-4/Demo-4.ipynb
+++ b/Demo-4/Demo-4.ipynb
@@ -303,6 +303,23 @@
    "source": [
     "widgets.interactive(update_plot, country=country_dropdown, date=date_dropdown)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries = [\"Germany\", \"France\", \"Italy\"]  # Karşılaştırmak istediğin ülkeleri yaz\n",
+    "df_filtreli = df[df[\"Country\"].isin(countries)]  # Seçili ülkeleri filtrele"
+   ]
   }
  ],
  "metadata": {
