Fertig - Vergleich 3 Ländern

--- a/Demo-4/Demo-4.ipynb
+++ b/Demo-4/Demo-4.ipynb
@@ -320,6 +320,37 @@
     "countries = [\"Germany\", \"France\", \"Italy\"]  # Karşılaştırmak istediğin ülkeleri yaz\n",
     "df_filtreli = df[df[\"Country\"].isin(countries)]  # Seçili ülkeleri filtrele"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_filtreli[\"Date\"] = pd.to_datetime(df_filtreli[\"Date\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 6))  \n",
+    "\n",
+    "for country in countries:\n",
+    "    df_country = df_filtreli[df_filtreli[\"Country\"] == country]\n",
+    "    plt.plot(df_country[\"Date\"], df_country[\"Confirmed\"], marker='o', label=country)\n",
+    "\n",
+    "plt.xlabel(\"Datum\")  \n",
+    "plt.ylabel(\"Bestätigte Fallzahl\")  \n",
+    "plt.title(\"Vergleich der bestätigten COVID-19-Fälle nach Ländern\")  \n",
+    "plt.xticks(rotation=45)  # Tarihleri eğimli göster\n",
+    "plt.legend()  \n",
+    "plt.grid(True, linestyle='--', alpha=0.5)  \n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
